front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: study-front-svc
  namespace: study-front
spec:
  type: NodePort
  clusterIP: 10.96.100.33
  selector:
    app: study-front
  ports:
    - name: web-port
      port: 8889	# clusterPort
      targetPort: 8889 # targetPort
      nodePort: 30030
