front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress-study-front
 namespace: study-front
 annotations:
   #nginx.ingress.kubernetes.io/upstream-hash-by: "true"
spec:
 ingressClassName: nginx
 rules:
 - http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: study-front-svc
           port:
             number: 8889
     - path: /front
       pathType: Prefix
       backend:
         service:
           name: study-front-svc
           port:
             number: 8889
     - path: /member
       pathType: Prefix
       backend:
         service:
           name: study-front-svc
           port:
             number: 8889
